@@ -4,9 +4,25 @@
 \alias{bayNorm_sup}
 \title{bayNorm with estimated parameters as input}
 \usage{
+<<<<<<< HEAD
 bayNorm_sup(Data, PRIORS = NULL, input_params = NULL,
   mode_version = FALSE, mean_version = FALSE, S = 20,
   parallel = TRUE, NCores = 5, BB_SIZE = TRUE, verbose = TRUE)
+=======
+bayNorm_sup(
+  Data,
+  PRIORS = NULL,
+  input_params = NULL,
+  mode_version = FALSE,
+  mean_version = FALSE,
+  S = 20,
+  parallel = TRUE,
+  NCores = 5,
+  BB_SIZE = TRUE,
+  verbose = TRUE,
+  out.sparse = FALSE
+)
+>>>>>>> c6a2982... DEV 1.5.11 allow dgCMatrix as output
 }
 \arguments{
 \item{Data}{A matrix of single-cell expression where rows
@@ -52,6 +68,10 @@ calculated based on both MME estimated size and BB
 estimated size. If FALSE, use MME estimated SIZE.}
 
 \item{verbose}{print out status messages. Default is TRUE.}
+
+\item{out.sparse}{Only valid for mean version: 
+Whether the output is of type dgCMatrix or not. 
+Default is FALSE.}
 }
 \value{
 List containing 3D arrays of normalized
